# snow-lang

./: .gdb_history  .gitignore  .history  CHANGELOG.md  Cargo.toml  GRAMMAR.md  README.md  build  clean  config.toml  inspect_wasm_binary.py  std.snow  test.hex  test.snow  test.wasm  test.wat  test2.hex  test2.wasm  wasm.mjs
.cargo/: config
.github/: FUNDING.yml
compiler/: Cargo.toml
compiler/crates/snowc-byte-code-gen/: Cargo.toml
compiler/src/: lib.rs
crates/error/: Cargo.toml
crates/one-liner/: Cargo.toml
crates/one-liner/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: expr.rs  lib.rs  op.rs  parser.rs  precedence.rs  tests.rs
crates/report/: Cargo.toml
crates/scanner/: Cargo.toml
crates/scanner/src/: scanner.rs  token.rs
crates/snowc-code-gen/: Cargo.toml
crates/snowc-code-gen/src/: lib.rs
crates/snowc-debug/src/: lib.rs
crates/snowc-error/: Cargo.toml
crates/snowc-error-messages/: Cargo.toml
crates/snowc-error-messages/src/: lib.rs
crates/snowc-error/src/: lib.rs
crates/snowc-errors/: Cargo.toml
crates/snowc-errors/src/: lib.rs
crates/snowc-lexer/: Cargo.toml
crates/snowc-lexer/src/: lib.rs  scanner.rs  span.rs  test.rs  token.rs
crates/snowc-lexer/tests/: test.rs
crates/snowc-native-code-gen/: Cargo.toml
crates/snowc-parse/: Cargo.toml  README.md
crates/snowc-parse/src/: error.rs  expr.rs  lib.rs  op.rs  parser.rs  precedence.rs  tests.rs
crates/snowc-parse/tests/: test.rs
crates/snowc-repl/: Cargo.toml
crates/snowc-repl/src/: lib.rs  lib.rs.old  terminal.rs
crates/snowc-tree-walker/: Cargo.toml
crates/snowc-tree-walker-eval/: Cargo.toml
crates/snowc-tree-walker-eval/src/: lib.rs
crates/snowc-tree-walker/src/: error.rs  lib.rs  symbol_table.rs  tests.rs  value.rs
crates/snowc-type-checker/: Cargo.toml
crates/snowc-type-checker/src/: lib.rs
crates/snowc-vm/samples/: fizbuz.asm  (+1 more)
crates/swrt-lexer/: Cargo.toml
editor/: snow-mode.el  snow.vim
example_scripts/: adding.snow  char.snow  closures.snow  curry.snow  do.snow  dolet.snow  false.snow  float.snow  function.snow  int.snow  main.snow  simple.snow  two_func.snow  unknown.snow
old/crates/snowc-code-gen/: Cargo.toml
old/crates/snowc-debug/: Cargo.toml
old/crates/snowc-debug/src/: lib.rs
old/crates/snowc-vm/: Cargo.toml  README.md
old/crates/snowc-vm/samples/: array.asm
old/crates/snowc-vm/src/: machine.rs
old/crates/snowc-vm/src/parse/: item.rs  label.rs
old_crates/snowc-error/: Cargo.toml
old_crates/snowc-errors/: Cargo.toml
old_crates/snowc-tree-walker-eval/: Cargo.toml
samples/: E0.snow  E10.snow  E13.snow  E20.snow  add.snow  add_function.snow  adding.snow  apply.snow  array.snow  changing_precedence.snow  closures.snow  curry.snow  do_if_else.snow  enums.snow  errors.snow  fizbuz.snow  hello_world.snow  hello_world_with_do.snow  hello_world_with_do_x_2.snow  if.snow  if_else.snow  inc.snow  invalid_type.snow  lambda_cal.snow  max_func.snow  other.snow  pipe.snow  records.snow  rule110.snow  std.snow
snow-vim/src/: lib.rs  main.rs
snow-vm/: Cargo.toml
snow-vm/samples/: inc_10_times.swasm  print_string.swasm  test.asm  test.swasm
snow-vm/src/: args.rs  assembler.rs  debug.rs  error.rs  lib.rs  machine.rs  main.rs  opcode.rs
src/: args.rs  cli.rs  combinators.rs  error.rs  front_end.rs  function.rs  interpreter.rs  ir.rs  ir_emitter.rs  lib.rs  main.rs  main.rs.old  parser.rs  position.rs  scanner.rs  test.rs  test_error.rs  test_parser.rs  test_scanner.rs  wasm_runtime.rs
src/code_gen/: haskell.rs  mod.rs  test_haskell.rs
src/ir/: code.rs  emitter.rs  expr_visitor.rs  mod.rs
src/old/: debug.rs  lexer.rs  lox_parser.rs  main.rs  parser.rs  test.rs  token.rs
src/parser/: atoms.rs  builtins.rs  expr.rs  mod.rs  parser.rs
src/repl/: mod.rs  shell.rs
src/wasm/: emitter.rs  mod.rs  module.rs  opcode.rs  section.rs
swrt/: Cargo.toml  README.md  helloworld
swrt/samples/: fib.asm  fizbuz.asm  helloworld  print_string.swasm
swrt/src/: assembler.rs  debug.rs  error.rs  lib.rs  machine.rs  main.rs  opcode.rs
swrt/src/parse/: data.rs  directive.rs  entry.rs  item.rs  label.rs  location.rs  mod.rs  reg.rs  token_op.rs
swrt/src/repl/: mod.rs
testing/: back.wasm  func.hex  func.wasm  if.hex  if.wasm  if.wat
wasm_debugger/: Cargo.toml
wasm_debugger/src/: main.rs
wasm_debugger_cli/: Cargo.toml
wasm_debugger_cli/src/: main.rs  module.rs  type_section.rs  utils.rs  wasm_walker.rs
(+75 files in other folders)
