[package]
name = "snowc"
version = "0.0.0"
edition = "2021"

[dependencies]
snowc-parse = { path="./crates/snowc-parse" }
snowc-type-checker = { path="./crates/snowc-type-checker" }
snowc-byte-code-gen = { path="./crates/snowc-byte-code-gen" }
snowc-error-messages = { path = "./crates/snowc-error-messages" }
snowc-tree-walker = { path = "./crates/snowc-tree-walker" }
clap = { version = "4.0.29", features = ["cargo"] }

[workspace]
members = [
    "./crates/*",
]


[[bin]]
name = "snowc"
path = "src/main.rs"

[lib]
name = "snowc"
path = "src/lib.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

