[package]
name = "snowc"
version = "0.0.0"
edition = "2021"

[dependencies]
snowc-parse = { path="./crates/snowc-parse" }
# snowc-type-checker = { path="./crates/snowc-type-checker" }
snowc-code-gen = { path="./crates/snowc-code-gen" }
snowc-repl = { path = "./crates/snowc-repl" }
snowc-vm = { path = "./crates/snowc-vm" }
snowc-tree-walker = { path = "./crates/snowc-tree-walker" }
clap = { version = "4.0.29", features = ["cargo"] }

[workspace]
members = [
    "./crates/*",
]

[ignore]
default-members = [
    "crates/snowc-type-checker",
]


[[bin]]
name = "snowc"
path = "src/main.rs"

[lib]
name = "snowc"
path = "src/lib.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

