[package]
name = "snowc"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.0.29", features = ["cargo"] }
leb128 = "0.2.5"
logos = "0.14.1"
wasmi = "0.36.0"
wasmtime = { version = "23.0.2", features = ['component-model', 'async', 'default', 'winch', 'debug-builtins'] }
wasmtime-wasi = "23.0.2"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

