[package]
name = "swrt"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
rustyline = "10.0.0"
snowc-error-messages = { path = "../crates/snowc-error-messages" }
snowc-lexer = { path = "../crates/snowc-lexer" }

[[bin]]
name = "swrt"
path = "src/main.rs"

[lib]
name = "vm"
path = "src/lib.rs"
