[package]
name = "snowc-repl"
version = "0.0.0"
edition = "2021"

[dependencies]
snowc-parse = { path = "../snowc-parse" }
snowc-lexer = { path = "../snowc-lexer" }
snowc-tree-walker = { path = "../snowc-tree-walker" }
crossterm = "0.27.0"
anyhow = "1.0.75"
# annotate-snippets = { version = "0.9.1", features = ["color"] }
