[package]
name = "snowc-debug"
version = "0.0.0"
edition = "2021"

[dependencies]

snowc-parse = { path = "../snowc-parse" }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
